fix scrollbar always showing

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,7 @@ html {
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow-y: initial;
 }
 
 body {
